css/main.css
body {
    font-size: 1em;
    font-family: Roboto, "Times New Roman";
}

#mainBox {
    position: relative;
    top: 0;
    margin: auto;
    width: 1440px;
    height: 1024px;
    background-image: url("../img/beach.jpg");
    background-color: white;
    text-align: center;
}

#testimonialHeading {
    position: relative;
    top: 40%;
}

#testimonialBox {
    width: 30%;
    min-height: min-content;
    position: relative;
    top: 60%;
    left: 35%;
    background-color: rgba(0,0,0,0.5);
}

.btn {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: auto;
    width: 30px;
    height: 30px;
}

.btn-left {
    left: -15px;
}

.btn-right {
    right: -15px;
}

#pictureEllipse {
    width: 96px;
    height: 96px;
    border-radius: 50%;
    border: 1px black solid;
    position: absolute;
    top: -64px;
    left: 0;
    right: 0;
    margin: auto;
    background-size: contain;
}

#quotation {
    width: 28px;
    height: 31px;
    position: absolute;
    bottom: -10px;
    left: 0;
    right: 0;
    margin: auto;
}

#testimonial {
    width: 80%;
    margin: auto;
    padding-top: 45px;
    padding-bottom: 25px;
}

